refactor: harden data ownership and bounded reads